--- a/public/compiled.style.css
+++ b/public/compiled.style.css
@@ -1448,6 +1448,28 @@ section h2{
   margin-right: auto;
 }
 
+.-mx-5{
+  margin-left: -1.25rem;
+  margin-right: -1.25rem;
+}
+
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.ml-4{
+  margin-left: 1rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+
 .mr-2{
   margin-right: 0.5rem;
 }
@@ -1472,24 +1494,16 @@ section h2{
   margin-top: 0.75rem;
 }
 
-.ml-4{
-  margin-left: 1rem;
-}
-
-.mt-1{
-  margin-top: 0.25rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
-}
-
-.mb-1{
-  margin-bottom: 0.25rem;
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .block{
   display: block;
+}
+
+.inline{
+  display: inline;
 }
 
 .flex{
@@ -1498,6 +1512,14 @@ section h2{
 
 .grid{
   display: grid;
+}
+
+.h-7{
+  height: 1.75rem;
+}
+
+.h-5{
+  height: 1.25rem;
 }
 
 .h-24{
@@ -1516,16 +1538,36 @@ section h2{
   height: 13rem;
 }
 
-.h-7{
-  height: 1.75rem;
+.h-1{
+  height: 0.25rem;
 }
 
-.h-5{
-  height: 1.25rem;
+.h-0\.5{
+  height: 0.125rem;
+}
+
+.h-0{
+  height: 0px;
+}
+
+.h-12{
+  height: 3rem;
+}
+
+.h-6{
+  height: 1.5rem;
 }
 
 .min-h-\[400px\]{
   min-height: 400px;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-2\/3{
+  width: 66.666667%;
 }
 
 .w-auto{
@@ -1540,16 +1582,8 @@ section h2{
   width: 100%;
 }
 
-.w-1\/3{
-  width: 33.333333%;
-}
-
-.w-2\/3{
-  width: 66.666667%;
-}
-
-.w-48{
-  width: 12rem;
+.w-20{
+  width: 5rem;
 }
 
 .max-w-xs{
@@ -1578,6 +1612,10 @@ section h2{
 
 .flex-\[2_1_auto\]{
   flex: 2 1 auto;
+}
+
+.flex-\[100\%\]{
+  flex: 100%;
 }
 
 .flex-shrink-0{
@@ -1632,6 +1670,10 @@ section h2{
   justify-content: space-evenly;
 }
 
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -1640,8 +1682,9 @@ section h2{
   border-radius: 9999px;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
+.rounded-l-lg{
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 
 .rounded-l-md{
@@ -1654,11 +1697,6 @@ section h2{
   border-bottom-left-radius: 0px;
 }
 
-.rounded-l-lg{
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
-
 .border{
   border-width: 1px;
 }
@@ -1666,6 +1704,21 @@ section h2{
 .border-slate-400{
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
+}
+
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
+.bg-slate-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-eyeprotect{
@@ -1707,24 +1760,34 @@ section h2{
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-teal-600{
   --tw-bg-opacity: 1;
   background-color: rgb(13 148 136 / var(--tw-bg-opacity));
 }
 
-.bg-slate-200{
+.bg-gray-300{
   --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.bg-slate-300{
+.bg-sky-600{
   --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+}
+
+.bg-blue-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover{
@@ -1736,6 +1799,10 @@ section h2{
   padding: 1.5rem;
 }
 
+.p-4{
+  padding: 1rem;
+}
+
 .p-0{
   padding: 0px;
 }
@@ -1744,8 +1811,9 @@ section h2{
   padding: 1.25rem;
 }
 
-.p-4{
-  padding: 1rem;
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-2{
@@ -1756,11 +1824,6 @@ section h2{
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .py-2{
@@ -1788,12 +1851,24 @@ section h2{
   padding-right: 2rem;
 }
 
-.pl-2{
-  padding-left: 0.5rem;
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-.pl-1{
-  padding-left: 0.25rem;
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .text-center{
@@ -1809,6 +1884,11 @@ section h2{
   line-height: 1.75rem;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1819,27 +1899,12 @@ section h2{
   line-height: 2.25rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
+.font-bold{
+  font-weight: 700;
 }
 
 .font-semibold{
   font-weight: 600;
-}
-
-.font-bold{
-  font-weight: 700;
 }
 
 .italic{
@@ -1848,6 +1913,11 @@ section h2{
 
 .leading-snug{
   line-height: 1.375;
+}
+
+.text-blue-700{
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
 .text-slate-500{
@@ -1880,24 +1950,14 @@ section h2{
   color: rgb(190 18 60 / var(--tw-text-opacity));
 }
 
-.text-purple-500{
+.text-sky-800{
   --tw-text-opacity: 1;
-  color: rgb(168 85 247 / var(--tw-text-opacity));
+  color: rgb(7 89 133 / var(--tw-text-opacity));
 }
 
-.text-indigo-500{
+.text-gray-800{
   --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity));
-}
-
-.text-indigo-700{
-  --tw-text-opacity: 1;
-  color: rgb(67 56 202 / var(--tw-text-opacity));
-}
-
-.text-blue-700{
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .drop-shadow-md{
@@ -1906,6 +1966,11 @@ section h2{
 }
 
 @media (min-width: 768px){
+  .md\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .md\:mt-5{
     margin-top: 1.25rem;
   }
